--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,10 @@ services:
       - DATABASE_URL=postgresql://user:password@postgres:5432/flights
       - REDIS_URL=redis://redis:6379
     depends_on:
-      - postgres
-      - redis
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_started
 
   postgres:
     image: postgres:15
@@ -25,9 +27,14 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   redis:
-    image: redis:7
+    image: redis:6-alpine
     ports:
       - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 1s
+      timeout: 3s
+      retries: 5
 
   frontend:
     build:
@@ -43,11 +50,14 @@ services:
     volumes:
       - ./app:/code/app
     environment:
+      - PYTHONPATH=.
       - DATABASE_URL=postgresql://user:password@postgres:5432/flights
       - REDIS_URL=redis://redis:6379
     depends_on:
-      - postgres
-      - redis
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_started
 
 volumes:
   postgres_data:
