--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ uvicorn[standard]
 psycopg2-binary
 redis
 pydantic
+pydantic-settings
 sqlalchemy
 python-multipart
 pandas
 passlib[bcrypt]>=1.7.4
 bcrypt>=4.0.1
 python-jose[cryptography]
+tqdm
